# Deep-Photonics-Reliability

./: .gitignore  README.md  data_preparation.ipynb  main.py  pyproject.toml
checkpoints/: training_history.pkl
data/: fixed_labels  fixed_labels.csv  pseudo_masks_mapping.csv  test_data.csv  train_data.csv  val_data.csv
results/final_evaluation/: classification_report.txt
scratch/: detailed_analysis.py  monitor_training.py  plot_results.py
src/: Data_loader.ipynb  EDA.ipynb  calc_stats.py  compare_experiments.py  compare_phases_visuals.py  config.py  config.yaml  data_pipeline.py  data_preparation.ipynb  dataset.py  dataset_dataloader.py  evaluate_test_set.py  grad_cam.py  image_processing.ipynb  model.py  model_creation.ipynb  physics_utils.py  plot_phase4.py  pre_training.ipynb  pre_training_prep.ipynb  prepare_masks_csv.py  read_progress.py  requirements.txt  train.py  train_phase4.py  training_engine.py  utils.py
